# sports-media-gen

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .trivyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_add_logo_variants.py  0003_add_leagues_logo_columns.py  0004_provider_columns.py  0005_milb_leagues.py  0006_milb_rookie_league.py  0007_sport_hierarchy_and_league_aliases.py  0008_milb_umbrella_winter_independent.py
nginx/: nginx.conf  nginx.conf.template
scripts/: make_placeholder_logo.py  pip_audit_to_sarif.py
src/matchup_thumbs/: __init__.py  contrast.py  main.py  metrics.py  middleware.py  render.py  resolver.py  seed.py  settings.py  svg.py
src/matchup_thumbs/assets/: __init__.py  loader.py
src/matchup_thumbs/espn/: __init__.py  client.py  models.py
tests/: conftest.py  test_app.py  test_contrast.py  test_espn_schema.py  test_generators.py  test_health.py  test_image_routes.py  test_league_logo_contrast.py  test_league_logo_loader.py  test_listing_routes.py  test_metrics.py  test_middleware.py  test_migrations.py  test_nginx_kind_drift.py  test_palette.py  test_pip_audit_to_sarif.py  test_providers.py  test_render.py  test_resolver.py  test_seed.py  test_settings.py  test_svg_raster.py
tests/fixtures/: espn_nba_response.json  mlb_aaa_response.json  mlb_rookie_response.json  pip_audit_sample.json
tests/integration/: nginx_smoke.sh
(+22 files in other folders)
